// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match snapshots BannerColumn default 1`] = `
<div
  className="box-adaptive__BoxStyled-sc-g2wy39-0 eddDdF"
  data-test="post-card-banner"
/>
`;

exports[`Match snapshots BannerColumn with label 1`] = `
<div
  className="box-adaptive__BoxStyled-sc-g2wy39-0 eddDdF"
  data-test="post-card-banner"
>
  <div
    className="box-adaptive__BoxStyled-sc-g2wy39-0 jzxqvy"
  >
    <span
      className="text-content__TextStyled-sc-1stkrsz-0 ikPAGE"
      data-test="text-content"
    >
      Ads
    </span>
  </div>
</div>
`;

exports[`Match snapshots BannerColumn with label and children 1`] = `
<div
  className="box-adaptive__BoxStyled-sc-g2wy39-0 eddDdF"
  data-test="post-card-banner"
>
  <div
    className="box-adaptive__BoxStyled-sc-g2wy39-0 jzxqvy"
  >
    <span
      className="text-content__TextStyled-sc-1stkrsz-0 ikPAGE"
      data-test="text-content"
    >
      Ads
    </span>
  </div>
  <div
    className="test"
  />
</div>
`;
